Fixed color not showing

--- a/css/style.css
+++ b/css/style.css
@@ -290,7 +290,7 @@ a.read_more2:hover {
     border: 1px solid #fff;
 }
 
-.project-description {
+.project_description {
     background: #700009;
     position: relative;
 }
